<resources>

    <string name="cart">Cart</string>
    <string name="delete_cart">Delete cart</string>
    <string name="formatted_price_float">$%1$s.00</string>

    <string name="checkout">Checkout</string>
    <string name="payment_method">Payment method</string>
    <string name="shipping_information">Shipping information</string>
    <string name="change">change</string>
    <string name="total">Total</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="pay_now">Pay now</string>
    <string name="my_credit_card">My credit card</string>
    <string name="products">Products:</string>
    <string name="your_cart_is_empty">Your cart is empty</string>

    <string name="successfully_added_to_cart">Successfully added to the cart</string>
    <string name="cart_cleared">Cart cleared</string>
    <string name="item_removed_from_cart">Item removed from the cart</string>

    <string name="clear_cart">Clear cart</string>
</resources>